@@ -1,6 +1,7 @@
 0.09
  - Add another publishing places cleanup (Ve Praze, We Praze). Thanks Josef
    Moravec.
+ - Add constructor tests.
  - Rewrite checks in Wikidata to use of Mo::utils.
 
 0.08 2024-06-21T09:12:52+02:00
